updating look, feel, and security